--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     <h2>電箱蓋</h2>
     <ul>
-        <li>右上凹痕</li>
+        <li>右上牆壁凹痕</li>
     </ul>
     <div>
         <a href="./img/elec01.jpg">
